--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,5 +24,16 @@ jobs:
       uses: docker/login.action@v3
       with: 
         registry: ghcr.io
-        username: ${{ github.repository_owner}}
-        password:
+        username: ${{ github.repository_owner }}
+        password: ${{ secrets.GITHUB_TOKEN }}
+      name: lint-dockerfile
+      user: hadolint/hadolint-action@v3.1.0
+      with:
+        dockerfile: Dockerfile
+      name: Build Container
+      user: docker/build-push-action@v5
+      with:
+        context:
+        push: true
+        labels: {{ steps.meta.outputs.labels }}
+        labels: {{ steps.meta.outputs.labels }}, ghcr.io/rifki227/belajar-ci-cd
